[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "server_sniffer_utils"
version = "1.0.0"
authors = [
  { name="Giuseppe D'Aquanno", email="GiuDaquan@gmail.com" },
]
description = "A package implementing core functionalities of the Server Sniffer web application"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.7"
dependencies = [
  "pyyaml",
  "deepdiff",
  "pymongo"
]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]